# mpl-loop-sim

./: .gitignore  README.md  pyproject.toml
data/property_tables/: README.md
data/surrogates/: README.md
data/validation/: README.md
docs/architecture/: ARCHITECTURE_FINAL_AUDIT.md  ARCHITECTURE_LEVEL_1.md  ARCHITECTURE_LEVEL_2.md  ARCHITECTURE_LEVEL_3.md  ARCHITECTURE_MASTER.md  ARCHITECTURE_REVIEW_LEGACY.md  CORRELATION_CONTRACT.md  INTERFACE_SPEC.md  MODELING_DECISIONS.md  OPEN_ARCHITECTURE_QUESTIONS.md  SCHEMA_SPEC.md
docs/decisions/: DECISION_LOG.md
docs/literature/: ARQUITECTURA_LIBRERIA_MPL.md  LITERATURE_CORE_ANALYSIS.md  TABLA_COMPONENTES.md
docs/presentations/: generate_mpl_presentation.py  mpl_library.pptx
docs/roadmap/: IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  ROADMAP.md
docs/user_guide/: CONCEPTS.md  EXAMPLES.md  QUICKSTART.md
docs/validation/: TEST_PLAN_V1.md  VALIDATION_PLAN.md
examples/: README.md  fixed_heat_rate_hx.py  minimal_closed_mpl_solver.py  minimal_coupled_closure.py  minimal_evaporator_condenser_loop.py  minimal_pressure_closure.py  segmented_counterflow_hx.py
legacy/: README.md
legacy/A0_SS_v3_Stable/: A0_SS_v3_Stable.py  ACETONE.csv  AMMONIA.csv  CARBONDIOXIDE.csv  CYCLOPENTANE.csv  ETHANOL.csv  ISOBUTANE.csv  ISOPENTANE.csv  METHANOL.csv  NHEPTANE.csv  NHEXANE.csv  NOVEC649.csv  NPENTANE.csv  PROPANE.csv  R11.csv  R12.csv  R1224YDZ.csv  R1233ZDE.csv  R1234YF.csv  R1234ZEE.csv  R1336MZZZ.csv  R134A.csv  R152A.csv  R22.csv  R245FA.csv  R404A.csv  R410A.csv  R507A.csv  TOLUENE.csv  WATER.csv
legacy/MPL_Simulator/: pyproject.toml
legacy/MPL_Simulator/.spyproject/config/backups/: workspace.ini.bak
legacy/MPL_Simulator/docs/: MPL_Simulation_Library_Roadmap.docx
legacy/MPL_Simulator/mpl/: A1_TwoPhProp.py  Simple_test_v1.py  __init__.py  accumulator.py  base.py  condenser.py  correlations.py  evaporator.py  fluid_properties.py  loop.py  pipe.py  pump.py
legacy/MPL_Simulator/tests/: conftest.py  test_components_base_pipe.py  test_correlations.py  test_fluid_properties.py  test_loop.py  test_pump_accumulator.py
legacy/MPL_Simulator/validation/: validation_li2021.py
legacy/PyP2PL/: PyP2PL_Roadmap_Proposal.docx  setup.py
papers/: README.md
src/mpl_sim/: __init__.py
tests/calibration/: test_calibration_primitives.py  test_calibration_registry.py
tests/closed_loop/: test_minimal_closed_mpl_solver.py  test_minimal_coupled_closure.py  test_minimal_pressure_closure.py  test_residual_framework.py
tests/components/: test_accumulator_component.py  test_component_contract.py  test_condenser_component.py  test_evaporator_component.py  test_evaporator_condenser_contribution_scenario_binding.py  test_evaporator_condenser_scenario_plumbing.py  test_heat_exchanger_component_boundaries.py  test_pipe_acceleration.py  test_pipe_calibration_placement.py  test_pipe_gravity.py  test_pipe_mechanical_summary.py  test_pipe_single_phase_friction.py  test_pipe_skeleton.py  test_pump_component.py
tests/correlation/: test_correlation_contract.py  test_correlation_registry.py  test_single_phase_dp.py
tests/correlations/: __init__.py  test_pca_volume_pressure_law.py  test_single_phase_htc.py  test_two_phase_dp.py  test_two_phase_htc.py  test_volume_pressure_law_contract.py
(+310 files in other folders)
