# -*- coding: utf-8 -*-
"""
Created on Fri Apr  3 14:26:26 2026

@author: AndresH
"""

[project]
name = "mpl-simulator"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "coolprop>=6.4",
    "numpy",
    "scipy",
    "matplotlib",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["mpl"]